fix tutor cards

--- a/student-portal.html
+++ b/student-portal.html
@@ -1656,7 +1656,7 @@
                     </div>
 
                     <!-- Study Planner Card -->
-                    <div class="feature-card" onclick="window.location.href='planner.html'">
+                    <div class="feature-card" onclick="window.location.href='study-planner.html'">
                         <div class="feature-icon-wrapper">
                             <div class="feature-icon">
                                 <i class="fas fa-calendar-alt"></i>
