--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -60,19 +60,27 @@
                 <h3>P2P Forum</h3>
                 <p>Community discussion board.</p>
             </div>
+
             <div class="dash-card" onclick="window.location.href='create-file.html'">
                 <div class="card-icon"><i class="fas fa-file-alt"></i></div>
                 <h3>Create Your Document</h3>
                 <p>Create your own personalized documents for your lessons.</p>
             </div>
-            <!-- Add this card to tutor-portal.html -->
-            <div class="dah-card" id="tutorProfileCard" onclick="window.location.href='tutor-profile-setup.html'">
+
+            <!-- Fixed Tutor Profile Card - Now properly styled as a dash-card -->
+            <div class="dash-card tutor-profile-card" id="tutorProfileCard"
+                onclick="window.location.href='tutor-profile-setup.html'">
                 <div class="card-icon"><i class="fas fa-chalkboard-teacher"></i></div>
-                <div class="card-body">
+                <div class="card-content">
                     <h3>Tutor Profile</h3>
-                    <p id="profileStatusText">Complete your tutor profile to start receiving bookings</p>
+                    <div class="profile-status-container">
+                        <span class="status-dot" id="profileStatusDot"></span>
+                        <p class="profile-status-text" id="profileStatusText">Complete your tutor profile to start
+                            receiving bookings</p>
+                    </div>
                 </div>
             </div>
+        </div>
     </main>
 
     <script src="tutor.js"></script>
@@ -89,29 +97,29 @@
 
                     const statusDot = document.getElementById('profileStatusDot');
                     const statusText = document.getElementById('profileStatusText');
-                    const setupBtn = document.getElementById('setupProfileBtn');
+                    const profileCard = document.getElementById('tutorProfileCard');
 
                     if (status.complete) {
                         statusDot.classList.add('complete');
-                        statusDot.classList.remove('status-dot'); // Remove red
+                        statusDot.classList.remove('status-dot');
                         statusText.textContent = `Profile complete! ${status.verified ? '✓ Verified' : 'Pending verification'}`;
-                        setupBtn.innerHTML = '<i class="fas fa-eye"></i> View Profile';
-                        setupBtn.onclick = function () {
-                            window.location.href = 'tutor-profile-setup.html';
-                        };
+                        profileCard.classList.add('profile-complete');
                     } else {
                         statusDot.classList.add('status-dot');
                         statusText.textContent = 'Complete your tutor profile to start receiving bookings';
-                        setupBtn.innerHTML = '<i class="fas fa-edit"></i> Setup Profile';
-                        setupBtn.onclick = function () {
-                            window.location.href = 'tutor-profile-setup.html';
-                        };
+                        profileCard.classList.add('profile-incomplete');
                     }
                 } catch (error) {
                     console.error('Error checking profile status:', error);
                 }
             }
         });
+
+        function logout() {
+            localStorage.removeItem('p2p_user');
+            sessionStorage.removeItem('p2p_user');
+            window.location.href = 'login.html';
+        }
     </script>
 </body>
 
